--- a/package.json
+++ b/package.json
@@ -1,15 +1,5 @@
-body {
-  background: #2b2b2b;
-  height: 100vh;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-family: Helvetica neue, roboto;
-}
-
-h1 {
-  color: #bdbdbd;
-  font-weight: 300;
+{
+  "dependencies": {
+    "three": "0.83.0"
+  }
 }
